--- a/frontend/styles/services.css
+++ b/frontend/styles/services.css
@@ -104,6 +104,7 @@
 }
 
 .nav-menu ul {
+  margin-top: 1rem;
   display: flex;
   list-style: none;
   margin-right: 3rem;
@@ -161,7 +162,7 @@
 }
 
 /* Responsive styles */
-@media (max-width: 768px) {
+@media (max-width: 910px) {
   .menu-toggle {
     display: block;
     background: none;
